<resources>
    <string name="app_name">Alculator</string>

    <string name="history_current">Current</string>
    <string name="history_total">Total</string>
    <string name="history_volume">Volume</string>
    <string name="history_quantity">Quantity</string>
    <string name="history_alcohol">Alcohol</string>
    <string name="history_calories">Calories</string>
    <string name="history_kcal">kcal</string>
    <string name="history_centiliters">cL</string>
    <string name="history_liters">L</string>

    <string name="graph_score_high">High Score:</string>
    <string name="graph_score_current">Current Score:</string>
    <string name="graph_score_count">High Score in:</string>

    <string name="main_button_add">+</string>
    <string name="main_button_rem">-</string>
    <string name="main_no_drink_added">No drink added</string>
    <string name="sober_in">Sober in</string>
    <string name="sober_in_hours">h</string>
    <string name="sober_in_minutes">m</string>

    <string name="settings_metric">Metric</string>
    <string name="settings_imperial">Imperial</string>
    <string name="settings_gender">Gender:</string>
    <string name="settings_male">Male</string>
    <string name="settings_female">Female</string>
    <string name="settings_weight">Weight:</string>
    <string name="settings_kg">kg</string>
    <string name="settings_lbs">lbs</string>
    <string name="settings_reset">Reset</string>

    <string name="add_drink_kcal_optional">(Calories):</string>
    <string name="add_drink_volume">Volume:</string>
    <string name="add_drink_alcohol_content">Alcohol content:</string>
    <string name="add_drink_name">Drink name:</string>
    <string name="add_drink_name_hint">Enter name here</string>
    <string name="add_drink_cancel">Cancel</string>
    <string name="add_drink_ok">OK</string>
    <string name="add_drink_missing_fields">Required fields are missing</string>

    <string name="permille_above_5">Your blood alcohol content is now above 5</string>
    <string name="permille_above_3">Your blood alcohol content is now above 3</string>
    <string name="permille_above_2">Your blood alcohol content is now above 2</string>
    <string name="permille_above_1">Your blood alcohol content is now above 1</string>
    <string name="permille_above_05">Your blood alcohol content is now above 0.5</string>
    <string name="permille_below_05">Your blood alcohol content is still below 0.5</string>

    <string name="dialog_ok">OK</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_title">Info</string>

    <string name="page_history">History</string>
    <string name="page_graph">Graph</string>
    <string name="page_main">Main</string>
    <string name="page_settings">Settings</string>

    <!-- Achievement strings -->
    <!--<string name="achievement_unlocked">Achievement unlocked!</string>
    <string name="achievement_heavy_drinker">HEAVY DRINKER</string>
    <string name="achievement_heavy_drinker_text">Achieve a blood alcohol content above 3</string>

    <string name="achievement_probably_dead">PROBABLY DEAD</string>
    <string name="achievement_probably_dead_text">You should probably be dead by now</string>-->

    <!-- Tutorial strings -->
    <string name="tutorial_1">"Welcome to Alculator.\nUpon opening the application you will be introduced to this screen.\nThis tutorial will guide you through basic use of the application."</string>
    <string name="tutorial_2">"The first thing you need to know is how to add drinks to your Alculator. To do this, click the highlighted button.\nWhen you add drinks, they will show up alongside this button in the same window. You may click a drink to select it or hold down a finger to see information about it."</string>
    <string name="tutorial_3">"When you have a drink selected, click these buttons to add or subtract the selected drink from your Alculators current blood alcohol content calculation."</string>
    <string name="tutorial_4">"Use the tabs on the top of the screen to jump between menus, which provide additional information about your Alculator history or enable you to change your settings."</string>
    <string name="tutorial_5">"When adding a drink, you will encounter this screen for filling out information about your drink."</string>
    <string name="tutorial_6">"You may click this empty frame to add a personal picture from your gallery to your drink.\nThere is nothing more to it, your Alculator is ready for use!"</string>

</resources>
