<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    android:orientation="vertical">


    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:id="@+id/radioGroup_unit"
        android:padding="10dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_metric"
            android:id="@+id/radioButton_metric" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_imperial"
            android:id="@+id/radioButton_imperial" />

    </RadioGroup>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayout_gender"
        android:layout_below="@+id/radioGroup_unit"
        android:layout_alignParentLeft="true" >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/settings_gender"
            android:id="@+id/textView_gender" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioGroup_gender"
            android:layout_alignParentRight="true">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_male"
                android:id="@+id/radioButton_male"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_female"
                android:id="@+id/radioButton_female"
                android:layout_alignBottom="@+id/textView_gender"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

        </RadioGroup>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tableRow_weight"
        android:layout_below="@+id/relativeLayout_gender"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/settings_weight"
            android:id="@+id/textView_weight" />

        <EditText
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:id="@+id/editText_weight"
            android:layout_toLeftOf="@+id/textView_kg_lbs"
            android:autoText="false"
            android:enabled="true"
            android:focusable="true"
            android:inputType="number"
            android:maxLength="3"
            android:maxLines="1"
            android:focusableInTouchMode="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/settings_kg"
            android:id="@+id/textView_kg_lbs"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

</LinearLayout>
