<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:weightSum="1">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="30sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:text="@string/add_drink_name"
            android:id="@+id/drink_name" />

        <EditText
            android:layout_width="200sp"
            android:layout_height="match_parent"
            android:hint="@string/add_drink_name_hint"
            android:id="@+id/editText_drink_name"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:maxLength="20"
            android:maxLines="1"
            android:inputType="text" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="30sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:text="@string/add_drink_alcohol_content"
            android:id="@+id/textView5" />

        <EditText
            android:layout_width="60sp"
            android:layout_height="match_parent"
            android:text=""
            android:id="@+id/editText_drink_percentage"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/percent"
            android:layout_toStartOf="@+id/percent"
            android:maxLength="4"
            android:maxLines="1"
            android:inputType="number|numberDecimal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="30sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:text="%"
            android:id="@+id/percent" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="30sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:id="@+id/volume"
            android:text="@string/add_drink_volume" />

        <EditText
            android:layout_width="100sp"
            android:layout_height="match_parent"
            android:text=""
            android:id="@+id/editText_drink_volume"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/cl"
            android:maxLength="3"
            android:maxLines="1"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="30sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:text="@string/history_centiliters"
            android:id="@+id/cl" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="30sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:text="@string/add_drink_kcal_optional"
            android:id="@+id/calories" />

        <EditText
            android:layout_width="100sp"
            android:layout_height="match_parent"
            android:id="@+id/editText_drink_calories"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/kcal"
            android:inputType="number"
            android:maxLines="1"
            android:maxLength="3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="30sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:text="@string/history_kcal"
            android:id="@+id/kcal" />

    </RelativeLayout>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="263dp"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:id="@+id/image"
            android:clickable="true"
            android:layout_gravity="center_vertical"
            android:background="@drawable/btn_black"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_drink_cancel"
            android:id="@+id/button_cancel"
            android:layout_weight="0.5" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_drink_ok"
            android:id="@+id/button_ok"
            android:layout_weight="0.5" />

    </TableRow>


</LinearLayout>