<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="25dp"
                android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/score_high"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/graph_score_high"
                android:textSize="30dp"
                android:layout_marginBottom="25dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="3.33‰"
                android:textSize="30dp"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/score_current"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/graph_score_current"
                android:textSize="30dp"
                android:layout_marginBottom="25dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="2.45‰"
                android:textSize="30dp"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/score_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/graph_score_count"
                android:textSize="30dp"
                android:layout_marginBottom="25dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="4 fl."
                android:textSize="30dp"/>

        </TableRow>

    </LinearLayout>

    <com.jjoe64.graphview.GraphView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/graphView" />

</RelativeLayout>